--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="style.css"/>
     </head>
 
     <body>
         <header>
             <!-- place navbar here -->
+            <div class="bg-azul">
+                <h1>aaaaaaaaaaaaaaaaaaaaa</h1>
+            </div>
         </header>
         <main></main>
         <footer>
