--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
                 <h1>aaaaaaaaaaaaaaaa</h1>
             </div>
         </header>
-        <main></main>
+        <main>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Cum necessitatibus reiciendis omnis error nobis ex in aspernatur. 
+                Officia, laboriosam dolore. Tempore corporis quia tempora, temporibus excepturi
+                 debitis fuga quaerat veritatis?
+            </p>
+        </main>
         <footer>
             <!-- place footer here -->
         </footer>
